--- a/technologies/mautic-crm-detect.yaml
+++ b/technologies/mautic-crm-detect.yaml
@@ -14,7 +14,7 @@ requests:
     path:
       - "{{BaseURL}}/s/login"
 
-    matcherscondition: or
+    matchers-condition: or
     matchers:
       - type: word
         part: body
