--- a/technologies/sap-web-dispatcher-admin-portal.yaml
+++ b/technologies/sap-web-dispatcher-admin-portal.yaml
@@ -19,20 +19,20 @@ requests:
     matchers:
       - type: word
         part: header
-        conditions: or
+        condition: or
         words:
           - "Basic realm=\"WEB ADMIN\""
           - "SAP NetWeaver Application Server"
 
       - type: status
-        conditions: or
+        condition: or
         status:
           - 401
           - 200
 
       - type: word
         part: body
-        conditions: or
+        condition: or
         words:
           - "SAP Web Dispatcher"
           - "<title>Administration</title>"
