--- a/vulnerabilities/other/sick-beard-xss.yaml
+++ b/vulnerabilities/other/sick-beard-xss.yaml
@@ -8,7 +8,7 @@ info:
   reference:
     - https://sickbeard.com/ # vendor homepage
     - https://github.com/midgetspy/Sick-Beard # software link
-  customAttributes:
+  additional-fields:
     shodan-dork: sickbeard
 
 requests:
