--- a/default-logins/grafana/grafana-default-credential.yaml
+++ b/default-logins/grafana/grafana-default-credential.yaml
@@ -23,8 +23,7 @@ requests:
         - prom-operator
         - admin
 
-    # Added default grafana and prometheus user.
-    # Source: https://stackoverflow.com/questions/54039604/what-is-the-default-username-and-password-for-grafana-login-page
+    # Added default grafana and prometheus user. reference[2]
 
     attack: sniper
 
