--- a/workflows/grafana-workflow.yaml
+++ b/workflows/grafana-workflow.yaml
@@ -6,12 +6,8 @@ info:
   description: A simple workflow that runs all Grafana related nuclei templates on a given target.
   tags: workflow
 
-  # Supported on Nuclei v2.2.0 (https://github.com/projectdiscovery/nuclei/releases/tag/v2.2.0)
-  # Old workflows still remains valid, and will be working with all nuclei versions.
-
 workflows:
-
   - template: exposed-panels/grafana-detect.yaml
 
     subtemplates:
-      - template: default-logins/grafana/grafana-default-credential.yaml
+      - tags: grafana
