--- a/misconfiguration/grafana-public-signup.yaml
+++ b/misconfiguration/grafana-public-signup.yaml
@@ -15,7 +15,7 @@ requests:
         Origin: {{BaseURL}}
         Referer: {{BaseURL}}
 
-        {"username":"{{randstr}}@tld","password":"{{randstr_1}}"}
+        {"username":"nuclei_{{randstr}}","password":"{{randstr_1}}"}
 
     matchers-condition: and
     matchers:
