--- a/misconfiguration/grafana-public-signup.yaml
+++ b/misconfiguration/grafana-public-signup.yaml
@@ -4,7 +4,7 @@ info:
   name: Grafana Public Signup
   author: pdteam
   severity: medium
-  tags: grafana
+  tags: grafana,intrusive
 
 requests:
   - raw:
