--- a/vulnerabilities/other/caucho-resin-info-disclosure.yaml
+++ b/vulnerabilities/other/caucho-resin-info-disclosure.yaml
@@ -12,12 +12,10 @@ requests:
       - "{{BaseURL}}/resin-doc/viewfile/?file=/WEB-INF/resin-web.xml" #ver:3.0.17/3.0.18
       - "{{BaseURL}}/%20../web-inf/web.xml" #ver:3.1.1
 
-    matchers-condition: and
     matchers:
-      - type: status
-        status:
-          - 200
       - type: word
         words:
-          - "WEB-INF"
+          - "<web-app"
+          - "</web-app>"
         part: body
+        condition: and
