--- a/vulnerabilities/other/caucho-resin-info-disclosure.yaml
+++ b/vulnerabilities/other/caucho-resin-info-disclosure.yaml
@@ -9,9 +9,10 @@ info:
 requests:
   - method: GET
     path:
-      - "{{BaseURL}}/resin-doc/viewfile/?file=/WEB-INF/resin-web.xml" #ver:3.0.17/3.0.18
-      - "{{BaseURL}}/%20../web-inf/web.xml" #ver:3.1.1
+      - "{{BaseURL}}/resin-doc/viewfile/?file=/WEB-INF/resin-web.xml" # Version: 3.0.17/3.0.18
+      - "{{BaseURL}}/%20../web-inf/web.xml" # Version: 3.1.1
 
+    matchers-condition: and
     matchers:
       - type: word
         words:
@@ -19,3 +20,7 @@ requests:
           - "</web-app>"
         part: body
         condition: and
+
+      - type: status
+        status:
+          - 200
