--- a/.github/workflows/template-validate.yml
+++ b/.github/workflows/template-validate.yml
@@ -26,7 +26,7 @@ jobs:
         env:
           GO111MODULE: on
         run: |
-          go get -v github.com/projectdiscovery/nuclei/v2/cmd/nuclei@dev
+          go get -v github.com/projectdiscovery/nuclei/v2/cmd/nuclei
         shell: bash
 
       - name: Template Validation
