--- a/exposures/tokens/docker/dockercfg.yaml
+++ b/exposures/tokens/docker/dockercfg.yaml
@@ -11,13 +11,10 @@ requests:
   - method: GET
     path:
       - "{{BaseURL}}/.dockercfg"
+      - "{{BaseURL}}/.docker/config.json"
 
     matchers-condition: and
     matchers:
-      - type: word
-        part: header
-        words:
-          - "text/plain"
 
       - type: word
         words:
