--- a/vulnerabilities/other/comtrend-password-exposure.yaml
+++ b/vulnerabilities/other/comtrend-password-exposure.yaml
@@ -1,11 +1,11 @@
-id: comtrend-ct5367-rce
+id: comtrend-passsword-exposure
 
 info:
   name: COMTREND ADSL Router CT-5367 C01_R12 - Remote Code Execution
   author: geeknik
   severity: high
   reference: https://www.exploit-db.com/exploits/16275
-  tags: router,disclosure
+  tags: router,exposure,iot
 
 requests:
   - method: GET
