--- a/vulnerabilities/other/netgear-router-exposure.yaml
+++ b/vulnerabilities/other/netgear-router-exposure.yaml
@@ -1,4 +1,4 @@
-id: netgear-router-disclosure
+id: netgear-router-exposure
 
 info:
   name: Netgear Router S/N Disclosure
@@ -8,7 +8,7 @@ info:
     - https://www.exploit-db.com/exploits/45741
   author: geeknik
   severity: critical
-  tags: netgear,disclosure,iot
+  tags: netgear,exposure,iot
 
 requests:
   - method: GET
