--- a/misconfiguration/springboot/springboot-threaddump.yaml
+++ b/misconfiguration/springboot/springboot-threaddump.yaml
@@ -13,13 +13,14 @@ requests:
     path:
       - "{{BaseURL}}/threaddump"
       - "{{BaseURL}}/actuator/threaddump"
+
     matchers-condition: and
     matchers:
       - type: word
         part: body
         words:
-          - '"threads"'
-          - '"threadName"'
+          - '"threads":'
+          - '"threadName":'
         condition: and
 
       - type: status
