--- a/network/expsoed-adb.yaml
+++ b/network/expsoed-adb.yaml
@@ -4,7 +4,7 @@ info:
   name: Exposed Android Debug Bridge
   author: pdteam,pikpikcu
   severity: high
-  tags: network,adb
+  tags: network,adb,rce
   reference: https://www.hackeracademy.org/how-to-hack-android-device-with-adb-android-debugging-bridge
 
 network:
