--- a/exposed-panels/phpmyadmin-panel.yaml
+++ b/exposed-panels/phpmyadmin-panel.yaml
@@ -20,13 +20,12 @@ requests:
       - "{{BaseURL}}/typo3/phpmyadmin/"
       - "{{BaseURL}}/web/phpmyadmin/"
       - "{{BaseURL}}/xampp/phpmyadmin/"
-      - "{{BaseURL}}/phpMyAdmin/" #add another possible path for phpmyadmin panel detection
-    matchers-condition: or #add matching condition
+      - "{{BaseURL}}/phpMyAdmin/"
+
     matchers:
       - type: word
         words:
-          - "<title>phpMyAdmin</title>"
-          - "<title>phpMyAdmin </title>" #result pattern with a trailing whitespace.
+          - "<title>phpMyAdmin"
 
     extractors:
       - type: regex
