marking as critical for rce

--- a/network/expsoed-adb.yaml
+++ b/network/expsoed-adb.yaml
@@ -3,7 +3,7 @@ id: expsoed-adb
 info:
   name: Exposed Android Debug Bridge
   author: pdteam,pikpikcu
-  severity: high
+  severity: critical
   tags: network,adb,rce
   reference: https://www.hackeracademy.org/how-to-hack-android-device-with-adb-android-debugging-bridge
 
