Update and rename dockercfg.yaml to dockercfg-config.yaml

--- a/exposures/tokens/docker/dockercfg-config.yaml
+++ b/exposures/tokens/docker/dockercfg-config.yaml
@@ -1,11 +1,11 @@
-id: dockercfg
+id: dockercfg-config
 
 info:
   name: Detect .dockercfg
   author: geeknik
   severity: high
   description: Docker registry authentication data
-  tags: docker,exposure
+  tags: docker,exposure,config
 
 requests:
   - method: GET
