--- a/exposures/configs/firebase-config-exposure.yaml
+++ b/exposures/configs/firebase-config-exposure.yaml
@@ -5,7 +5,7 @@ info:
   author: geeknik
   reference: https://github.com/firebase/firebaseui-web/blob/master/demo/public/sample-config.js
   severity: high
-  tags: firebase,exposure
+  tags: firebase,exposure,config
 
 requests:
   - method: GET
