--- a/exposed-panels/hp-ilo-5.yaml
+++ b/exposed-panels/hp-ilo-5.yaml
@@ -5,7 +5,7 @@ info:
   author: geeknik
   severity: info
   reference: https://www.hpe.com/us/en/servers/integrated-lights-out-ilo.html
-  tags: hp,ilo
+  tags: hp,ilo,panel
 
 requests:
   - method: GET
