--- a/network/ftp-weak-credentials.yaml
+++ b/network/ftp-weak-credentials.yaml
@@ -1,7 +1,7 @@
-id: ftp-default-credentials
+id: ftp-weak-credentials
 
 info:
-  name: FTP Service with default credentials
+  name: FTP Service with weak credentials
   author: pussycat0x
   severity: critical
   tags: network,ftp,default-login
@@ -18,9 +18,7 @@ network:
       username:
         - admin
         - root
-        - anonymous
       password:
-        - anonymous
         - password
         - toor
         - nas
