--- a/exposures/tokens/docker/dockercfg-config.yaml
+++ b/exposures/tokens/docker/dockercfg-config.yaml
@@ -22,6 +22,11 @@ requests:
           - '"auth":'
         condition: and
 
+      - type: word
+        part: header
+        words:
+          - "text/plain"
+
       - type: status
         status:
           - 200
