--- a/technologies/owasp-juice-shop-detected.yaml
+++ b/technologies/owasp-juice-shop-detected.yaml
@@ -5,12 +5,12 @@ info:
   author: pikpikcu
   severity: info
   tags: tech,owasp
+  reference: https://fofa.so/result?qbase64=dGl0bGU9Ik9XQVNQIEp1aWNlIFNob3Ai
 
 requests:
   - method: GET
     path:
       - "{{BaseURL}}"
-      - "{{BaseURL}}:3000"
 
     matchers-condition: and
     matchers:
