--- a/exposures/configs/dbeaver-credentials.yaml
+++ b/exposures/configs/dbeaver-credentials.yaml
@@ -3,7 +3,7 @@ id: dbeaver-credentials
 info:
   name: DBeaver Credential Exposure
   author: geeknik
-  severity: info
+  severity: high
   tags: exposure,dbeaver
 
 requests:
