--- a/iot/epson-unauthorized-access-detect.yaml
+++ b/iot/epson-unauthorized-access-detect.yaml
@@ -10,12 +10,15 @@ requests:
     path:
       - "{{BaseURL}}/PRESENTATION/HTML/TOP/INDEX.HTML"
       - "{{BaseURL}}/PRESENTATION/EPSONCONNECT"
+      - "{{BaseURL}}/PRESENTATION/ADVANCED/COMMON/TOP"
     matchers-condition: and
     matchers:
       - type: word
         words:
           - "epson"
           - "DNS/Proxy Setup"
+          - "Network Status"
+          - "Status"
       - type: status
         status:
-          - 200         
+          - 200
