--- a/iot/epson-unauthorized-access-detect.yaml
+++ b/iot/epson-unauthorized-access-detect.yaml
@@ -1,24 +1,32 @@
 id: epson-unauthorized-access-detect
+
 info:
   name: Epson Printer
   author: pussycat0x
   severity: medium
   reference: https://www.exploit-db.com/ghdb/6922
-  tags: iot,printer
+  tags: iot,printer,panel
+
 requests:
   - method: GET
     path:
-      - "{{BaseURL}}/PRESENTATION/HTML/TOP/INDEX.HTML"
       - "{{BaseURL}}/PRESENTATION/EPSONCONNECT"
-      - "{{BaseURL}}/PRESENTATION/ADVANCED/COMMON/TOP"
+
     matchers-condition: and
     matchers:
       - type: word
         words:
-          - "epson"
-          - "DNS/Proxy Setup"
-          - "Network Status"
-          - "Status"
+          - "Epson Connect"
+          - "/IMAGE/EPSONLOGO.PNG"
+        condition: and
+
       - type: status
         status:
           - 200
+
+    extractors:
+      - type: regex
+        part: body
+        group: 1
+        regex:
+          - "<title>([A-Z-0-9]+) Series</title>"
