--- a/iot/epson-web-control-detect.yaml
+++ b/iot/epson-web-control-detect.yaml
@@ -4,19 +4,22 @@ info:
   author: pussycat0x
   severity: info
   reference: https://www.exploit-db.com/ghdb/6873
-  tags: iot,printer
+  tags: iot,printer,panel
+
 requests:
   - method: GET
     path:
       - "{{BaseURL}}/cgi-bin/home"
+
     matchers-condition: and
     matchers:
       - type: word
         words:
-          - "epson web control"
-          - "advanced"
-          - "OSD control Pad"
-          - "Status Information"
+          - "Epson Web Control"
+          - "Basic Control"
+          - "Advanced"
+        condition: and
+
       - type: status
         status:
           - 200
