--- a/exposed-panels/epson-unauthorized-access-detect.yaml
+++ b/exposed-panels/epson-unauthorized-access-detect.yaml
@@ -5,7 +5,7 @@ info:
   author: pussycat0x
   severity: medium
   reference: https://www.exploit-db.com/ghdb/6922
-  tags: iot,printer,panel
+  tags: iot,printer,panel,unauth
 
 requests:
   - method: GET
