--- a/vulnerabilities/other/commax-biometric-access-control-system-auth-bypass.yaml
+++ b/vulnerabilities/other/commax-biometric-access-control-system-auth-bypass.yaml
@@ -5,7 +5,7 @@ info:
   author: gy741
   severity: critical
   description: The application suffers from an authentication bypass vulnerability. An unauthenticated attacker through cookie poisoning can bypass authentication and disclose sensitive information and circumvent physical controls in smart homes and buildings.
-  reference: |
+  reference:
     - https://www.zeroscience.mk/en/vulnerabilities/ZSL-2021-5661.php
   tags: commax,auth-bypass
 
