--- a/exposed-panels/ibm-note-login.yaml
+++ b/exposed-panels/ibm-note-login.yaml
@@ -10,6 +10,7 @@ info:
 requests:
   - method: GET
     path:
+      - '{{BaseURL}}'
       - '{{BaseURL}}/names.nsf'
 
     matchers-condition: and
