--- a/exposed-panels/lacie-panel.yaml
+++ b/exposed-panels/lacie-panel.yaml
@@ -10,6 +10,7 @@ info:
 requests:
   - method: GET
     path:
+      - '{{BaseURL}}'
       - '{{BaseURL}}/dashboard/'
 
     matchers-condition: and
@@ -17,6 +18,14 @@ requests:
       - type: word
         words:
           - 'id_LaCie'
+        part: body
+
+      - type: regex
+        regex:
+          - '(?m)<title>([a-zA-Z0-9&#; ]|)+Dashboard<\/title>$'
+        part: body
+
+
       - type: status
         status:
           - 200
