--- a/misconfiguration/http-missing-security-headers.yaml
+++ b/misconfiguration/http-missing-security-headers.yaml
@@ -5,7 +5,7 @@ info:
   author: socketz
   severity: info
   description: It searches missing security headers, but obviously, could be so less generic and could be useless for Bug Bounty.
-  tags: config,headers,misconfiguration
+  tags: config,headers,misconfiguration,generic
 
 requests:
   - method: GET
