--- a/vulnerabilities/other/mcafee-epo-rce.yaml
+++ b/vulnerabilities/other/mcafee-epo-rce.yaml
@@ -8,7 +8,7 @@ info:
     A ZipSlip vulnerability in McAfee ePolicy Orchestrator (ePO)
     is a type of Path Traversal occurring when archives are unpacked
     if the names of the packed files are not properly sanitized.
-    An attacker can create archives with files containing “../” in their names,
+    An attacker can create archives with files containing "../" in their names,
     making it possible to upload arbitrary files
     to arbitrary directories or overwrite existing ones during archive extraction.
 
