more strict matchers

--- a/network/ftp-default-credentials.yaml
+++ b/network/ftp-default-credentials.yaml
@@ -1,9 +1,9 @@
 id: ftp-default-credentials
 
 info:
-  name: FTP Service with default credentials
+  name: FTP Service with anonymous Login
   author: pussycat0x
-  severity: low
+  severity: info
   tags: network,ftp,default-login
 
 network:
@@ -18,3 +18,5 @@ network:
       - type: word
         words:
           - "230"
+          - "Anonymous user logged in"
+        condition: and
