--- a/technologies/glpi-cms-detect.yaml
+++ b/technologies/glpi-cms-detect.yaml
@@ -9,9 +9,10 @@ info:
 requests:
   - method: GET
     path:
-      - "{{BaseURL}}/"
+      - "{{BaseURL}}"
       - "{{BaseURL}}/glpi/"
       - "{{BaseURL}}/glpi2/"
+
     matchers-condition: and
     matchers:
       - type: word
@@ -20,6 +21,7 @@ requests:
           - "_glpi_csrf_token"
           - "GLPI Copyright"
         condition: and
+
       - type: status
         status:
           - 200
