--- a/exposures/files/glpi-status-ldap-domain-disclosure.yaml
+++ b/exposures/files/glpi-status-ldap-domain-disclosure.yaml
@@ -17,8 +17,10 @@ requests:
     matchers:
       - type: word
         words:
-          - "GLPI_DB_OK"
-          - "Check LDAP servers"
+          - "GLPI_"
+          - "LDAP servers"
+        condition: and
+
       - type: status
         status:
           - 200
