--- a/exposures/files/glpi-status-ldap-domain-disclosure.yaml
+++ b/exposures/files/glpi-status-ldap-domain-disclosure.yaml
@@ -18,7 +18,7 @@ requests:
       - type: word
         words:
           - "GLPI_"
-          - "LDAP servers"
+          - "LDAP server"
         condition: and
 
       - type: status
