--- a/exposures/files/glpi-telemetry-disclosure.yaml
+++ b/exposures/files/glpi-telemetry-disclosure.yaml
@@ -11,13 +11,15 @@ requests:
     path:
       - "{{BaseURL}}/ajax/telemetry.php"
       - "{{BaseURL}}/glpi/ajax/telemetry.php"
+
     matchers-condition: and
     matchers:
       - type: word
         words:
-          - "uuid"
-          - "glpi"
+          - '"uuid":'
+          - '"glpi":'
         condition: and
+
       - type: status
         status:
           - 200
