--- a/exposures/files/axis-happyaxis.yaml
+++ b/exposures/files/axis-happyaxis.yaml
@@ -1,10 +1,10 @@
-id: axis-happyaxis-disclosure
+id: axis-happyaxis
 
 info:
-  name: axis-happyaxis-disclosure
+  name: Axis Happyaxis Exposure
   author: dogasantos
   severity: info
-  tags: axis,axis2,middleware
+  tags: axis,axis2,middleware,exposure,apache
 
 requests:
   - method: GET
@@ -13,15 +13,18 @@ requests:
       - "{{BaseURL}}/axis/happyaxis.jsp"
       - "{{BaseURL}}/axis2-web/HappyAxis.jsp"
       - "{{BaseURL}}/happyaxis.jsp"
+
     matchers-condition: and
     matchers:
       - type: word
         words:
           - "Axis Happiness Page"
           - "Axis2 Happiness Page"
-          - "java.vendor"
           - "Examining Application Server"
+          - "Examining Version Service"
+          - "Examining System Properties"
         condition: or
+
       - type: status
         status:
           - 200
