--- a/technologies/apache-axis-detect.yaml
+++ b/technologies/apache-axis-detect.yaml
@@ -5,14 +5,15 @@ info:
   author: dogasantos
   severity: info
   description: Axis and Axis2 detection
-  tags: axis2,middleware
+  tags: tech,axis2,middleware,apache
 
 requests:
   - method: GET
     path:
+      - "{{BaseURL}}"
       - "{{BaseURL}}/axis2/"
       - "{{BaseURL}}/axis/"
-      - "{{BaseURL}}/"
+
     matchers-condition: and
     matchers:
       - type: word
@@ -24,6 +25,7 @@ requests:
           - "installation"
           - "Admin"
         condition: and
+
       - type: status
         status:
           - 200
