--- a/exposed-panels/3g-wireless-gateway.yaml
+++ b/exposed-panels/3g-wireless-gateway.yaml
@@ -4,16 +4,19 @@ info:
   author: pussycat0x
   severity: info
   reference: https://www.exploit-db.com/ghdb/7050
-  tags: tech,panel
+  tags: panel
+
 requests:
   - method: GET
     path:
       - "{{BaseURL}}/htmlcode/html/indexdefault.asp"
+
     matchers-condition: and
     matchers:
       - type: word
         words:
           - "g_i3gState"
+
       - type: status
         status:
           - 200
