--- a/exposed-panels/3g-wireless-gateway.yaml
+++ b/exposed-panels/3g-wireless-gateway.yaml
@@ -16,6 +16,9 @@ requests:
       - type: word
         words:
           - "g_i3gState"
+          - "g_sysinfo_sim_state"
+          - "g_iUID"
+        condition: and
 
       - type: status
         status:
