--- a/exposed-panels/3g-wireless-gateway.yaml
+++ b/exposed-panels/3g-wireless-gateway.yaml
@@ -4,7 +4,7 @@ info:
   author: pussycat0x
   severity: info
   reference: https://www.exploit-db.com/ghdb/7050
-  tags: panel
+  tags: panel,router
 
 requests:
   - method: GET
