--- a/exposed-panels/hitron-technologies.yaml
+++ b/exposed-panels/hitron-technologies.yaml
@@ -4,17 +4,21 @@ info:
   author: pussycat0x
   severity: info
   reference: https://www.exploit-db.com/ghdb/7062
-  tags: tech,panel
+  tags: router,panel
+
 requests:
   - method: GET
     path:
       - "{{BaseURL}}/login.html"
+
     matchers-condition: and
     matchers:
       - type: word
         words:
           - "Hitron"
           - "$.hitron.languages.lang_init();"
+        condition: and
+
       - type: status
         status:
           - 200
