--- a/exposed-panels/r-webserver-panel.yaml
+++ b/exposed-panels/r-webserver-panel.yaml
@@ -1,19 +1,22 @@
-id: r-webserver-detect
+id: r-webserver-panel
 info:
-  name: R WebServer
+  name: R WebServer Panel
   author: pussycat0x
   severity: info
   reference: https://www.exploit-db.com/ghdb/7132
-  tags: tech,panel
+  tags: panel
+
 requests:
   - method: GET
     path:
       - "{{BaseURL}}/"
+
     matchers-condition: and
     matchers:
       - type: word
         words:
-          - "<title>R WebServer"
+          - "<title>R WebServer</title>"
+
       - type: status
         status:
           - 200
