--- a/exposed-panels/hitron-technologies.yaml
+++ b/exposed-panels/hitron-technologies.yaml
@@ -15,7 +15,7 @@ requests:
     matchers:
       - type: word
         words:
-          - "Hitron"
+          - "hitron"
           - "$.hitron.languages.lang_init();"
         condition: and
 
