--- a/file/php/php-scanner.yaml
+++ b/file/php/php-scanner.yaml
@@ -143,7 +143,7 @@ file:
           - "__set"
           - "__isset"
           - "__unset"
-      - type: regex:
+      - type: regex
         # phpinfo detected
         regex:
           - "phpinfo"
