--- a/miscellaneous/aws-ecs-container-agent-tasks.yaml
+++ b/miscellaneous/aws-ecs-container-agent-tasks.yaml
@@ -6,17 +6,20 @@ info:
   severity: info
   tags: aws,docker
   description: Aws container metadata content
-  reference: https://docs.aws.amazon.com/en_us/elasticbeanstalk/latest/dg/create_deploy_docker_ecstutorial.html
+  reference: https://docs.aws.amazon.com/en_us/elasticbeanstalk/latest/dg/create_deploy_docker_ecstutorial.html#create_deploy_docker_ecstutorial_connect_inspect
+
 requests:
   - method: GET
     path:
       - "{{BaseURL}}/v1/metadata"
       - "{{BaseURL}}/v1/tasks"
+
     matchers-condition: and
     matchers:
       - type: word
         words:
           - "arn:aws:ecs"
+
       - type: status
         status:
           - 200
