--- a/miscellaneous/aws-ecs-container-agent-tasks.yaml
+++ b/miscellaneous/aws-ecs-container-agent-tasks.yaml
@@ -4,7 +4,7 @@ info:
   name: aws-ecs-container-agent-tasks
   author: dogasantos
   severity: info
-  tags: aws,docker
+  tags: aws,docker,ec2
   description: Aws container metadata content
   reference: https://docs.aws.amazon.com/en_us/elasticbeanstalk/latest/dg/create_deploy_docker_ecstutorial.html#create_deploy_docker_ecstutorial_connect_inspect
 
