--- a/exposures/files/webpack-sourcemap-disclosure.yaml
+++ b/exposures/files/webpack-sourcemap-disclosure.yaml
@@ -10,15 +10,23 @@ requests:
   - method: GET
     path:
       - "{{BaseURL}}"
+      - "{{RootURL}}/{{Path}}/{{map}}.js.map"
 
     matchers-condition: and
     matchers:
       - type: word
         words:
-          - ".js.map"
-        part: body
-        condition: and
+          - "application/octet-stream"
+        part: header
 
       - type: status
         status:
           - 200
+
+    extractors:
+      - type: regex
+        internal: true
+        name: map
+        group: 1
+        regex:
+          - "sourceMappingURL=([a-z0-9.]+).js.map"
