--- a/exposures/files/webpack-sourcemap-disclosure.yaml
+++ b/exposures/files/webpack-sourcemap-disclosure.yaml
@@ -3,7 +3,7 @@ id: webpack-sourcemap-disclosure
 info:
   name: Webpack Sourcemap Disclosure
   author: dhiyaneshDk
-  severity: medium
+  severity: info
   tags: exposure,files
 
 requests:
@@ -16,8 +16,10 @@ requests:
     matchers:
       - type: word
         words:
-          - "application/octet-stream"
-        part: header
+          - '"version":'
+          - '"file":'
+          - '"sources":'
+        condition: and
 
       - type: status
         status:
