--- a/default-logins/wso2/wso2-default-password.yaml
+++ b/default-logins/wso2/wso2-default-password.yaml
@@ -4,6 +4,7 @@ info:
   name: WSO2 Management Console Default Password
   author: cocxanh
   severity: high
+  reference: https://docs.wso2.com/display/UES100/Accessing+the+Management+Console
   tags: default-login,wso2
 
 requests:
@@ -21,5 +22,7 @@ requests:
     matchers:
       - type: word
         words:
-          - "index.jsp?loginStatus=true"
+          - "/carbon/admin/index.jsp?loginStatus=true"
+          - "JSESSIONID"
         part: header
+        condition: and
