--- a/misconfiguration/unauthenticated-mongo-express.yaml
+++ b/misconfiguration/unauthenticated-mongo-express.yaml
@@ -2,7 +2,7 @@ id: unauthenticated-mongo-express
 
 info:
   name: Mongo Express Unauthenticated
-  author: dhiyaneshDK
+  author: dhiyaneshDK,b0rn2r00t
   severity: high
   reference: https://www.exploit-db.com/ghdb/5684
   tags: mongo,unauth
