--- a/exposed-panels/phpmyadmin-panel.yaml
+++ b/exposed-panels/phpmyadmin-panel.yaml
@@ -21,12 +21,13 @@ requests:
       - "{{BaseURL}}/web/phpmyadmin/"
       - "{{BaseURL}}/xampp/phpmyadmin/"
       - "{{BaseURL}}/phpMyAdmin/"
-
+      
+    stop-at-first-match: true
     matchers:
       - type: word
         words:
           - "<title>phpMyAdmin"
-
+          - "pmahomme"
     extractors:
       - type: regex
         part: body
