Added workflow validation

--- a/.github/workflows/template-validate.yml
+++ b/.github/workflows/template-validate.yml
@@ -32,4 +32,5 @@ jobs:
       - name: Template Validation
         run: |
           nuclei -validate -t . -exclude .pre-commit-config.yaml
+          nuclei -validate -w ./workflows -exclude .pre-commit-config.yaml
         shell: bash
