--- a/exposed-panels/cisco-meraki-exposure.yaml
+++ b/exposed-panels/cisco-meraki-exposure.yaml
@@ -1,11 +1,11 @@
-id: cisco-security-details
+id: cisco-meraki-exposure
 
 info:
-  name: Cisco Meraki cloud & Security Appliance details
-  author: dhiyaneshDK
+  name: Cisco Meraki cloud & security Appliances Information Disclosure
+  author: dhiyaneshDK,r3naissance
   severity: info
   reference: https://www.exploit-db.com/ghdb/6708
-  tags: panel,cisco
+  tags: panel,cisco,meraki,disclosure
 
 requests:
   - method: GET
@@ -17,6 +17,9 @@ requests:
       - type: word
         words:
           - 'Your client connection'
+          - 'This security appliance is directly connected to a local network'
+        condition: and
+
       - type: status
         status:
           - 200
