--- a/fuzzing/header-command-injection.yaml
+++ b/fuzzing/header-command-injection.yaml
@@ -18,8 +18,9 @@ requests:
       header: helpers/payloads/request-headers.txt
       payload: helpers/payloads/command-injection.txt
     attack: clusterbomb
-    redirects: true
 
+    redirects: true
+    stop-at-first-match: true
     matchers-condition: or
     matchers:
       - type: word
