--- a/miscellaneous/unpatched-coldfusion.yaml
+++ b/miscellaneous/unpatched-coldfusion.yaml
@@ -20,6 +20,7 @@ requests:
       - "{{BaseURL}}/cfide-scripts/ajax/package/cfajax.js"
       - "{{BaseURL}}/cfmx/CFIDE/scripts/ajax/package/cfajax.js"
 
+    stop-at-first-match: true
     matchers-condition: and
     matchers:
 
