--- a/vulnerabilities/other/nginx-merge-slashes-path-traversal.yaml
+++ b/vulnerabilities/other/nginx-merge-slashes-path-traversal.yaml
@@ -16,6 +16,7 @@ requests:
       - "{{BaseURL}}/static///////../../../../etc/passwd"
       - "{{BaseURL}}///../app.js"
 
+    stop-at-first-match: true
     matchers-condition: and
     matchers:
 
