--- a/exposures/apis/wadl-api.yaml
+++ b/exposures/apis/wadl-api.yaml
@@ -31,6 +31,8 @@ requests:
       - "{{BaseURL}}"
       - "{{BaseURL}}/api/v1"
       - "{{BaseURL}}/api/v2"
+
+    stop-at-first-match: true
     matchers:
       - name: http-options
         type: word
