--- a/exposures/configs/git-config-nginxoffbyslash.yaml
+++ b/exposures/configs/git-config-nginxoffbyslash.yaml
@@ -22,8 +22,8 @@ requests:
       - '{{BaseURL}}/events../.git/config'
       - '{{BaseURL}}/media../.git/config'
       - '{{BaseURL}}/lib../.git/config'
-    headers:
-      User-Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:55.0) Gecko/20100101 Firefox/55
+
+    stop-at-first-match: true
     matchers:
       - type: word
         words:
