--- a/fuzzing/mdb-database-file.yaml
+++ b/fuzzing/mdb-database-file.yaml
@@ -22,7 +22,7 @@ requests:
     attack: sniper
     threads: 50
     max-size: 500 # Size in bytes - Max Size to read from server response
-
+    stop-at-first-match: true
     matchers-condition: and
     matchers:
       - type: binary
