--- a/technologies/lotus-domino-version.yaml
+++ b/technologies/lotus-domino-version.yaml
@@ -14,6 +14,7 @@ requests:
       - "{{BaseURL}}/iNotes/Forms85.nsf"
       - "{{BaseURL}}/iNotes/Forms9.nsf"
 
+    stop-at-first-match: true
     matchers-condition: and
     matchers:
       - type: status
