--- a/technologies/telerik-dialoghandler-detect.yaml
+++ b/technologies/telerik-dialoghandler-detect.yaml
@@ -29,6 +29,7 @@ requests:
       - '{{BaseURL}}/cms/portlets/Telerik.Web.UI.DialogHandler.aspx?dp=1'
       - '{{BaseURL}}/dashboard/UserControl/CMS/Page/Telerik.Web.UI.DialogHandler.aspx/Desktopmodules/Admin/dnnWerk.Users/DialogHandler.aspx?dp=1'
 
+    stop-at-first-match: true
     matchers-condition: and
     matchers:
       - type: status
