--- a/technologies/craft-cms-detect.yaml
+++ b/technologies/craft-cms-detect.yaml
@@ -19,6 +19,11 @@ requests:
         words:
           - 'X-Powered-By: Craft CMS'
 
+      - type: regex
+        part: header
+        regex:
+          - 'Set-Cookie: (Craft|CRAFT)'
+
       - type: status
         status:
           - 200
