--- a/technologies/craft-cms-detect.yaml
+++ b/technologies/craft-cms-detect.yaml
@@ -13,6 +13,9 @@ requests:
     path:
       - '{{BaseURL}}'
 
+    redirects: true
+    max-redirects: 2
+
     matchers:
       - type: word
         part: header
@@ -23,7 +26,3 @@ requests:
         part: header
         regex:
           - 'Set-Cookie: (Craft|CRAFT)'
-
-      - type: status
-        status:
-          - 200
