--- a/exposures/tokens/generic/general-tokens.yaml
+++ b/exposures/tokens/generic/general-tokens.yaml
@@ -29,6 +29,7 @@ requests:
           - '(?i)password(lessauth|requirementsashtmllist|emailnotfoundmessage|label|errormessage|message|_checkemail_title|_newfield_retype|_text_new|login_submit|_has_expired_title|_has_expired_text|_error|_hint|_strength)'
           - '(?i)(!native)|(.*keybindings)'
           - '(?i)(layout|a)key'
+          - '(?i)token_expires_in'
         condition: or
         negative: true
 
