--- a/default-logins/vidyo/vidyo-super-admin.yaml
+++ b/default-logins/vidyo/vidyo-super-admin.yaml
@@ -2,7 +2,7 @@ id: vidyo-Default-Credentials
 
 info:
   name: Vidyo Default Credentials
-  author: izn0u0
+  author: izn0u
   severity: medium
   description: test for default cred super:password
   tags: vidyo,default-login
@@ -71,16 +71,7 @@ requests:
 
     cookie-reuse: true
     redirects: true
-    #matchers-condition: and
     matchers:
       - type: status
         status:
           - 200
-
-      #- type: word
-        #words: 
-          #- "welcome to"
-        #part: body
-      #- type: dsl
-        #dsl:
-          #- 'contains(body, "welcome to")'
