--- a/exposures/apis/wadl-api.yaml
+++ b/exposures/apis/wadl-api.yaml
@@ -17,15 +17,16 @@ requests:
       - "{{BaseURL}}/api/application.wadl"
       - "{{BaseURL}}/api/v1/application.wadl"
       - "{{BaseURL}}/api/v2/application.wadl"
+
+    stop-at-first-match: true
     matchers:
       - name: http-get
         type: word
         words:
           - "This is simplified WADL with user and core resources only"
-          - "\"http://jersey.java.net/\""
+          - "http://jersey.java.net"
           - "http://wadl.dev.java.net/2009/02"
-        condition: or
-        part: body
+
   - method: OPTIONS
     path:
       - "{{BaseURL}}"
@@ -38,7 +39,5 @@ requests:
         type: word
         words:
           - "This is simplified WADL with user and core resources only"
-          - "\"http://jersey.java.net/\""
+          - "http://jersey.java.net"
           - "http://wadl.dev.java.net/2009/02"
-        condition: or
-        part: body
