--- a/default-logins/vidyo/vidyo-super-admin.yaml
+++ b/default-logins/vidyo/vidyo-super-admin.yaml
@@ -30,6 +30,8 @@ requests:
         Host: {{Hostname}}
         Referer: {{BaseURL}}/super/login.html?lang=en
 
+    cookie-reuse: true
+    redirects: true
 
     extractors:
       - type: regex
@@ -47,9 +49,7 @@ requests:
         kval:
           - JSESSIONID
 
-    cookie-reuse: true
-    redirects: true
     matchers:
-      - type: status
-        status:
-          - 200
+      - type: word
+        words:
+          - "Vidyo MainSuperAdmin"
