--- a/misconfiguration/overview-kubernetes-resource-report.yaml
+++ b/misconfiguration/overview-kubernetes-resource-report.yaml
@@ -8,13 +8,12 @@ info:
 requests:
   - method: GET
     path:
-      - "{{BaseURL}}:9100/metrics"
+      - "{{BaseURL}}"
     matchers-condition: and
     matchers:
       - type: word
         part: body
         words:
-          - "<title>Overview - Kubernetes Resource Report</title>"
           - "<title>Overview - Kubernetes Resource Report</title>"
           - "Pods"
           - "Worker Nodes"
