--- a/misconfiguration/http-missing-security-headers.yaml
+++ b/misconfiguration/http-missing-security-headers.yaml
@@ -11,103 +11,117 @@ requests:
   - method: GET
     path:
       - "{{BaseURL}}"
+
     redirects: true
     max-redirects: 3
     matchers-condition: or
     matchers:
-      - type: word
-        name: "Strict-Transport-Security"
-        words:
-          - "Strict-Transport-Security"
-        part: header
+      - type: regex
+        name: strict-transport-security
+        regex:
+          - "(?i)strict-transport-security"
         negative: true
-      - type: word
-        name: "Content-Security-Policy"
-        words:
-          - "Content-Security-Policy"
         part: header
+
+      - type: regex
+        name: content-security-policy
+        regex:
+          - "(?i)content-security-policy"
         negative: true
-      - type: word
-        name: "X-Frame-Options"
-        words:
-          - "X-Frame-Options"
         part: header
+
+      - type: regex
+        name: x-frame-options
+        regex:
+          - "(?i)x-frame-options"
         negative: true
-      - type: word
-        name: "X-Content-Type-Options"
-        words:
-          - "X-Content-Type-Options"
         part: header
+
+      - type: regex
+        name: x-content-type-options
+        regex:
+          - "(?i)x-content-type-options"
         negative: true
-      - type: word
-        name: "X-Permitted-Cross-Domain-Policies"
-        words:
-          - "X-Permitted-Cross-Domain-Policies"
         part: header
+
+      - type: regex
+        name: x-permitted-cross-domain-policies
+        regex:
+          - "(?i)x-permitted-cross-domain-policies"
         negative: true
-      - type: word
-        name: "Referrer-Policy"
-        words:
-          - "Referrer-Policy"
         part: header
+
+      - type: regex
+        name: referrer-policy
+        regex:
+          - "(?i)referrer-policy"
         negative: true
-      - type: word
-        name: "Clear-Site-Data"
-        words:
-          - "Clear-Site-Data"
         part: header
+
+      - type: regex
+        name: clear-site-data
+        regex:
+          - "(?i)clear-site-data"
         negative: true
-      - type: word
-        name: "Cross-Origin-Embedder-Policy"
-        words:
-          - "Cross-Origin-Embedder-Policy"
         part: header
+
+      - type: regex
+        name: cross-origin-embedder-policy
+        regex:
+          - "(?i)cross-origin-embedder-policy"
         negative: true
-      - type: word
-        name: "Cross-Origin-Opener-Policy"
-        words:
-          - "Cross-Origin-Opener-Policy"
         part: header
+
+      - type: regex
+        name: cross-origin-opener-policy
+        regex:
+          - "(?i)cross-origin-opener-policy"
         negative: true
-      - type: word
-        name: "Cross-Origin-Resource-Policy"
-        words:
-          - "Cross-Origin-Resource-Policy"
         part: header
+
+      - type: regex
+        name: cross-origin-resource-policy
+        regex:
+          - "(?i)cross-origin-resource-policy"
         negative: true
-      - type: word
-        name: "Access-Control-Allow-Origin"
-        words:
-          - "Access-Control-Allow-Origin"
         part: header
+
+      - type: regex
+        name: access-control-allow-origin
+        regex:
+          - "(?i)access-control-allow-origin"
         negative: true
-      - type: word
-        name: "Access-Control-Allow-Credentials"
-        words:
-          - "Access-Control-Allow-Credentials"
         part: header
+
+      - type: regex
+        name: access-control-allow-credentials
+        regex:
+          - "(?i)access-control-allow-credentials"
         negative: true
-      - type: word
-        name: "Access-Control-Expose-Headers"
-        words:
-          - "Access-Control-Expose-Headers"
         part: header
+
+      - type: regex
+        name: access-control-expose-headers
+        regex:
+          - "(?i)access-control-expose-headers"
         negative: true
-      - type: word
-        name: "Access-Control-Max-Age"
-        words:
-          - "Access-Control-Max-Age"
         part: header
+
+      - type: regex
+        name: access-control-max-age
+        regex:
+          - "(?i)access-control-max-age"
         negative: true
-      - type: word
-        name: "Access-Control-Allow-Methods"
-        words:
-          - "Access-Control-Allow-Methods"
         part: header
+
+      - type: regex
+        name: access-control-allow-methods
+        regex:
+          - "(?i)access-control-allow-methods"
         negative: true
-      - type: word
-        name: "Access-Control-Allow-Headers"
-        words:
-          - "Access-Control-Allow-Headers"
         part: header
-        negative: true
+
+      - type: regex
+        name: access-control-allow-headers
+        regex:
+          - "(?i)access-control-allow-headers"
