--- a/default-logins/abb/cs141-default-login.yaml
+++ b/default-logins/abb/cs141-default-login.yaml
@@ -45,6 +45,7 @@ requests:
 
         {"userName":"guest","password":"guest"}
 
+    stop-at-first-match: true
     matchers-condition: and
     matchers:
       - type: word
