--- a/misconfiguration/php-errors.yaml
+++ b/misconfiguration/php-errors.yaml
@@ -18,6 +18,7 @@ requests:
           - '(?i)Call to undefined method'
           - '(?i)You have an error in your SQL syntax'
           - '(?i)MySQL server version for the right syntax to use near'
+          - '(?i)MySQL cannot create a temporary file'
           - '(?i)PHP (Warning|Error)'
           - '(?i)Warning\: (pg|mysql)_(query|connect)\(\)'
           - '(?i)failed to open stream\:'
@@ -35,3 +36,5 @@ requests:
           - '(?i)expects parameter [0-9]*'
           - '(?i)Debug Trace'
           - '(?i)(syntax|parse) error'
+          - '(?i)Allowed Memory Size of \d* Bytes Exhausted'
+          - '(?i)Maximum execution time of \d* seconds exceeded'
