--- a/misconfiguration/node-exporter-metrics.yaml
+++ b/misconfiguration/node-exporter-metrics.yaml
@@ -1,27 +1,26 @@
 id: node-exporter-metrics
+
 info:
   name: Detect Node Exporter Metrics
   author: pussycat0x
   severity: low
   description: Information Disclosure of Garbage Collection
-  tags: node,exposure, metrics
+  tags: node,exposure,debug
+
 requests:
   - method: GET
     path:
-      - "{{BaseURL}}:9100/metrics"
+      - "{{BaseURL}}/metrics"
+
     matchers-condition: and
     matchers:
       - type: word
         part: body
         words:
-          - "go_goroutines"
-          - "HELP"
-          - "gauge"
           - "node_cooling_device"
           - "node_network"
-          - "boot"
-          - "TYPE go_goroutines gauge"
         condition: and
+
       - type: status
         status:
           - 200
