--- a/technologies/kubernetes-mirantis.yaml
+++ b/technologies/kubernetes-mirantis.yaml
@@ -1,21 +1,25 @@
-id: mirantis-kubernetes-engine
+id: kubernetes-mirantis
+
 info:
   name: Detect Mirantis Kubernetes Engine
   author: pussycat0x
   severity: info
-  tags: tech
-  reference: app="Mirantis-Kubernetes-Engine" -fofa query
+  tags: tech,kubernetes
+  additional-fields:
+    fofa-dork: 'app="Mirantis-Kubernetes-Engine"'
+
 requests:
   - method: GET
     path:
       - "{{BaseURL}}"
+
     matchers-condition: and
     matchers:
       - type: word
         part: body
         words:
-          - "<title>Mirantis Kubernetes Engine</title>"
-        condition: and
+          - "Mirantis Kubernetes Engine"
+
       - type: status
         status:
           - 200
