--- a/technologies/abyss-web-server.yaml
+++ b/technologies/abyss-web-server.yaml
@@ -1,21 +1,25 @@
-id: abyss-web-server-detect
+id: abyss-web-server
+
 info:
   name: Detect Abyss Web Server
   author: pussycat0x
   severity: info
   tags: tech
-  reference: app="Abyss-Web-Server" -fofa query
+  additional-fields:
+    fofa-dork: 'app="Abyss-Web-Server"'
+
 requests:
   - method: GET
     path:
       - "{{BaseURL}}"
+
     matchers-condition: and
     matchers:
       - type: word
         part: body
         words:
-          - "<TITLE>Welcome to Abyss Web Server</TITLE>"
-        condition: and
+          - "Welcome to Abyss Web Server"
+
       - type: status
         status:
           - 200
