--- a/technologies/oracle-iplanet-web-server.yaml
+++ b/technologies/oracle-iplanet-web-server.yaml
@@ -1,22 +1,25 @@
-id: oracle-iplanet-web-server-detect
+id: oracle-iplanet-web-server
+
 info:
   name: Detect Oracle-iPlanet-Web-Server
   author: pussycat0x
   severity: info
-  tags: tech
-  reference: app="Oracle-iPlanet-Web-Server -fofa query
+  tags: tech,oracle
+  additional-fields:
+    fofa-dork: 'app="Oracle-iPlanet-Web-Server'
+
 requests:
   - method: GET
     path:
       - "{{BaseURL}}"
+
     matchers-condition: and
     matchers:
       - type: word
         part: body
         words:
-          - "<title>Oracle iPlanet Web Server 7.0</title>"
-          - "<title>Oracle iPlanet Web Server</title>"
-        condition: and
+          - "Oracle iPlanet Web Server"
+
       - type: status
         status:
           - 200
