--- a/default-logins/vidyo/vidyo-default-credentials.yaml
+++ b/default-logins/vidyo/vidyo-default-credentials.yaml
@@ -5,6 +5,7 @@ info:
   author: izn0u
   severity: medium
   description: test for default cred super:password
+  reference: https://support.vidyocloud.com/hc/en-us/articles/226265128
   tags: vidyo,default-login
 
 
@@ -20,18 +21,10 @@ requests:
         Host: {{Hostname}}
         Content-Type: application/x-www-form-urlencoded
         Origin: {{BaseURL}}
-        Referer: http://{{Hostname}}/super/login.html?lang=en
+        Referer: {{RootURL}}/super/login.html?lang=en
         Cookie: JSESSIONID={{session}} ; VidyoPortalSuperLanguage=en
 
         username=super&password=password
-
-      - |
-        GET /super/loginhistory.html?csrf_tkn={{csrf_tkn}} HTTP/1.1
-        Host: {{Hostname}}
-        Referer: {{BaseURL}}/super/login.html?lang=en
-
-    cookie-reuse: true
-    redirects: true
 
     extractors:
       - type: regex
@@ -49,7 +42,13 @@ requests:
         kval:
           - JSESSIONID
 
+    matchers-condition: and
     matchers:
       - type: word
+        part: header
         words:
-          - "Vidyo MainSuperAdmin"
+          - "/super/index.html"
+
+      - type: status
+        status:
+          - 302
