--- a/technologies/nextcloud-detect.yaml
+++ b/technologies/nextcloud-detect.yaml
@@ -12,9 +12,10 @@ requests:
   - method: GET
     path:
       - '{{BaseURL}}'
-      - '{{BaseURL}}/nextcloud/index.php/login'
       - '{{BaseURL}}/login'
+      - '{{BaseURL}}/nextcloud/index.php/login'
 
+    stop-at-first-match: true
     redirects: true
     max-redirects: 2
     matchers:
