Updates across many templates for clarity, spelling, and grammar.

--- a/network/mysql-native-cred-bruteforce.yaml
+++ b/network/mysql-native-cred-bruteforce.yaml
@@ -5,7 +5,7 @@ info:
   author: iamthefrogy
   severity: info
   tags: network,mysql,bruteforce,db
-  description: MySQL instance with enabled native password support prone vulnerable for password brute-force attack.
+  description: MySQL instance with enabled native password support is prone to password brute-force attacks.
 
 network:
   - host:
