--- a/workflows/bigip-workflow.yaml
+++ b/workflows/bigip-workflow.yaml
@@ -3,7 +3,7 @@ id: bigip-workflow
 info:
   name: F5 BIG-IP Security Checks
   author: dwisiswant0
-  description: A simple workflow that runs all Bigip related nuclei templates on a given target.
+  description: A simple workflow that runs all BigIP related nuclei templates on a given target.
   tags: workflow
 
   # Supported on Nuclei v2.2.0 (https://github.com/projectdiscovery/nuclei/releases/tag/v2.2.0)
