--- a/vulnerabilities/other/couchdb-adminparty.yaml
+++ b/vulnerabilities/other/couchdb-adminparty.yaml
@@ -4,7 +4,7 @@ info:
   name: CouchDB Admin Party
   author: organiccrap
   severity: high
-  description: Requests made against CouchDB is done in the context of an admin user.
+  description: Requests made against CouchDB are done in the context of an admin user.
   tags: couchdb
 
 requests:
