--- a/workflows/azkaban-workflow.yaml
+++ b/workflows/azkaban-workflow.yaml
@@ -3,7 +3,7 @@ id: azkaban-workflow
 info:
   name: Azkaban Security Checks
   author: pdteam
-  description: A simple workflow that runs all azkaban related nuclei templates on a given target.
+  description: A simple workflow that runs all Azkaban related nuclei templates on a given target.
   tags: workflow
 
 workflows:
