--- a/workflows/lucee-workflow.yaml
+++ b/workflows/lucee-workflow.yaml
@@ -3,7 +3,7 @@ id: lucee-workflow
 info:
   name: Lucee Detection Workflow
   author: geeknik,dhiyaneshDk
-  description: A simple workflow that runs all Lucee related nuclei templates on given target.
+  description: A simple workflow that runs all Lucee related nuclei templates on a given target.
   tags: workflow
 
 workflows:
