--- a/workflows/springboot-workflow.yaml
+++ b/workflows/springboot-workflow.yaml
@@ -1,9 +1,9 @@
 id: springboot-workflow
 
 info:
-  name: Springboot Security Checks
+  name: Spring Boot Security Checks
   author: dwisiswant0
-  description: A simple workflow that runs all springboot related nuclei templates on a given target.
+  description: A simple workflow that runs all Spring Boot related nuclei templates on a given target.
   tags: workflow
 
   # Supported on Nuclei v2.2.0 (https://github.com/projectdiscovery/nuclei/releases/tag/v2.2.0)
