--- a/karel-ip-phone-lfi.yaml
+++ b/karel-ip-phone-lfi.yaml
@@ -4,7 +4,9 @@ info:
   name: Karel IP Phone IP1211 Web Management Panel - Directory Traversal
   author: 0x_Akoko
   severity: high
-  reference: https://cxsecurity.com/issue/WLB-2020100038
+  reference:
+    - https://cxsecurity.com/issue/WLB-2020100038
+    - https://www.karel.com.tr/urun-cozum/ip1211-ip-telefon
   tags: karel,lfi
 
 requests:
