--- a/vulnerabilities/other/openvpn-hhi.yaml
+++ b/vulnerabilities/other/openvpn-hhi.yaml
@@ -4,7 +4,7 @@ info:
   name: OpenVPN Host Header Injection
   author: twitter.com/Dheerajmadhukar
   severity: info
-  tag: openvpn,hhi
+  tags: openvpn,hhi
 
 requests:
   - raw:
