--- a/technologies/iplanet-web-server.yaml
+++ b/technologies/iplanet-web-server.yaml
@@ -1,21 +1,25 @@
-id: iPlanet-web-server-detect
+id: iplanet-web-server
+
 info:
   name: Detect iPlanet Webserver Detection
   author: pussycat0x
   severity: info
-  reference: app="iPlanet-Web-Server,-Enterprise-Edition-4.1" - fofa query
-  tags: default,tech
+  tags: tech
+  additional-fields:
+    fofa-dork: 'app="iPlanet-Web-Server,-Enterprise-Edition-4.1"'
+
 requests:
   - method: GET
     path:
       - "{{BaseURL}}"
+
     matchers-condition: and
     matchers:
       - type: word
         part: body
         words:
           - "iPlanet"
-      condition: and
+
       - type: status
         status:
           - 200
