--- a/exposed-panels/watchguard-panel.yaml
+++ b/exposed-panels/watchguard-panel.yaml
@@ -1,7 +1,7 @@
-id: watchguard
+id: watchguard-panel
 
 info:
-  name: Watchguard
+  name: Watchguard Panel
   author: ahmetpergamum
   severity: info
   reference: https://www.exploit-db.com/ghdb/7008
@@ -16,7 +16,7 @@ requests:
     matchers:
       - type: word
         words:
-          - 'User Authentication'
+          - '<title>User Authentication'
           - 'WatchGuard Technologies'
         condition: or
 
