--- a/homeautomation-v3-openredirect.yaml
+++ b/homeautomation-v3-openredirect.yaml
@@ -5,7 +5,7 @@ info:
   author: 0x_Akoko
   reference: https://www.zeroscience.mk/en/vulnerabilities/ZSL-2019-5559.php
   severity: medium
-  tags: homeautomation,redirect
+  tags: iot,redirect
 
 requests:
   - method: GET
