--- a/default-logins/druid/druid-default-password.yaml
+++ b/default-logins/druid/druid-default-password.yaml
@@ -11,16 +11,16 @@ requests:
     path:
       - "{{BaseURL}}/druid/submitLogin"
       - "{{BaseURL}}/submitLogin"
+
     body: "loginUsername=admin&loginPassword=admin"
 
     matchers-condition: and
     matchers:
 
-      - type: word
-        words:
-          - 'success'
-        part: body
-        condition: and
       - type: status
         status:
           - 200
+
+      - type: regex
+        regex:
+          - "^success$"
