--- a/misconfiguration/python-metrics.yaml
+++ b/misconfiguration/python-metrics.yaml
@@ -6,8 +6,10 @@ info:
   severity: low
   description: Information Disclosure of Garbage Collection
   tags: exposure,devops
-  reference: https://www.shodan.io/search?query=html%3A%22python_gc_objects_collected_total%22
-
+  reference: 
+      - https://www.shodan.io/search?query=html%3A%22python_gc_objects_collected_total%22
+      - https://gist.github.com/ruanbekker/e5b1e7895f62b020ff29b5f40767190c
+  
 requests:
   - method: GET
     path:
