--- a/default-logins/frps/frp-default-credentials.yaml
+++ b/default-logins/frps/frp-default-credentials.yaml
@@ -3,7 +3,7 @@ id: frp-default-credentials
 info:
   name: Frp Default credentials
   author: pikpikcu
-  severity: info
+  severity: high
   tags: frp,default-login
   reference: https://github.com/fatedier/frp/issues/1840
 
