--- a/default-logins/flir/flir-ax8-default-credentials.yaml
+++ b/default-logins/flir/flir-ax8-default-credentials.yaml
@@ -4,7 +4,7 @@ info:
   name: Flir Default Credentials
   author: pikpikcu
   severity: medium
-  tags: default-login,flir
+  tags: default-login,flir,camera,iot
 
 requests:
   - raw:
