--- a/technologies/sql-server-reporting.yaml
+++ b/technologies/sql-server-reporting.yaml
@@ -4,6 +4,7 @@ info:
   name: Detect Microsoft SQL Server Reporting
   author: puzzlepeaches
   severity: info
+  tags: tech,micrsoft
 
 requests:
   - method: GET
