--- a/vulnerabilities/other/vpms-auth-bypass.yaml
+++ b/vulnerabilities/other/vpms-auth-bypass.yaml
@@ -5,7 +5,7 @@ info:
   author: dwisiswant0
   severity: high
   reference: https://www.exploit-db.com/exploits/48877
-
+  tags: auth-bypass
 requests:
   - raw:
       - |
