--- a/vulnerabilities/other/zms-auth-bypass.yaml
+++ b/vulnerabilities/other/zms-auth-bypass.yaml
@@ -5,6 +5,7 @@ info:
   author: dwisiswant0
   severity: high
   reference: https://www.exploit-db.com/exploits/48880
+  tags: auth-bypass,zms
 
 requests:
   - raw:
