--- a/exposed-panels/prometheus-exposed-panel.yaml
+++ b/exposed-panels/prometheus-exposed-panel.yaml
@@ -1,9 +1,11 @@
 id: prometheus-exposed-panel
+
 info:
   name: Prometheus.io exposed panel
   author: organiccrap
   severity: low
-  # usually runs on port http/9090
+  tags: panel,prometheus
+
 requests:
   - method: GET
     path:
@@ -12,4 +14,4 @@ requests:
     matchers:
       - type: word
         words:
-          - <title>Prometheus Time Series Collection and Processing Server</title>
+          - '<title>Prometheus Time Series Collection and Processing Server</title>'
