--- a/technologies/clockwork-php-page.yaml
+++ b/technologies/clockwork-php-page.yaml
@@ -1,9 +1,11 @@
 id: clockwork-php-page
+
 info:
   name: Clockwork PHP page exposure
   author: organiccrap
   severity: high
   reference: https://twitter.com/damian_89_/status/1250721398747791360
+  tags: tech,clockwork
 
 requests:
   - method: GET
