--- a/technologies/dell/dell-idrac6-detect.yaml
+++ b/technologies/dell/dell-idrac6-detect.yaml
@@ -1,9 +1,11 @@
 id: dell-idrac6-detect
+
 info:
   name: Detect Dell iDRAC6
   author: kophjager007
   description: The Integrated Dell Remote Access Controller (iDRAC) is designed for secure local and remote server management and helps IT administrators deploy, update and monitor Dell EMC PowerEdge servers.
   severity: info
+  tags: tech,dell
 
 requests:
   - method: GET
