--- a/technologies/liferay-portal-detect.yaml
+++ b/technologies/liferay-portal-detect.yaml
@@ -1,9 +1,11 @@
 id: liferay-portal-detect
+
 info:
   name: Liferay Portal Detection
   author: organiccrap,dwisiswant0
   severity: info
   reference: https://github.com/mzer0one/CVE-2020-7961-POC # CVE-2020-7961: Liferay Portal Unauthenticated RCE
+  tags: tech,liferay
 
 requests:
   - method: GET
