--- a/workflows/confluence-workflow.yaml
+++ b/workflows/confluence-workflow.yaml
@@ -1,7 +1,7 @@
 id: confluence-workflow
 
 info:
-  name: Atlassian's Confluence workflow 
+  name: Atlassian Confluence workflow
   author: philippedelteil
   description: Workflow that runs all Confluence related nuclei templates                   
   tags: workflow
@@ -11,4 +11,3 @@ workflows:
   - template: technologies/confluence-detect.yaml
     subtemplates:
       - tags: confluence
-
