--- a/technologies/tomcat-detect.yaml
+++ b/technologies/tomcat-detect.yaml
@@ -1,7 +1,7 @@
-id: tomcat-version
+id: tomcat-detect
 
 info:
-  name: Detect Tomcat Version
+  name: Tomcat Version Detect
   author: philippedelteil
   description: If an Tomcat instance is deployed on the target URL, when we send a request for a non existent resource we receive a Tomcat error page with version.
   severity: info
